# libnabo

./: .dockerignore  .env.libnabo  .gitignore  .gitmodules  CHANGELOG.rst  CMakeLists.txt  Doxyfile.in  README.md  UseDoxygen.cmake  annotated.html  brute_force_cpu.cpp  changelog  classNabo_1_1ContextManager.html  classlinb_1_1any-members.html  classlinb_1_1any.html  functions_eval.html  hierarchy.html  index__heap_8h_source.html  knn.cpp  libnaboConfig.cmake.in  libnabo_dependencies_installer.bash  libnabo_installer.bash  nabo.cpp  package.xml  structNabo_1_1BruteForceSearch-members.html  structNabo_1_1EnableCLTypeSupport.html  structNabo_1_1EnableCLTypeSupport_3_01float_00_01CloudType_01_4-members.html  structNabo_1_1EnableCLTypeSupport_3_01float_00_01CloudType_01_4.html  structNabo_1_1IndexHeapBruteForceVector-members.html  structNabo_1_1IndexHeapBruteForceVector.html  structNabo_1_1IndexHeapSTL_1_1Entry.html  structNabo_1_1KDTreeBalancedPtInNodesStackOpenCL-members.html  structNabo_1_1KDTreeUnbalancedPtInLeavesImplicitBoundsStackOpt-members.html  structNabo_1_1KDTreeUnbalancedPtInLeavesImplicitBoundsStackOpt_1_1BucketEntry-members.html  structNabo_1_1NearestNeighbourSearch.html  test.html
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: update_documentation.yaml
build_system/: .env  .env.build_matrix.dependencies  .env.build_matrix.libnabo  .env.build_matrix.libnabo.bleeding  .env.build_matrix.libnabo.release  README.md  docker-compose.dependencies.yaml  docker-compose.libnabo.yaml  nabo_crawl_dependencies_build_matrix.bash  nabo_crawl_libnabo_build_matrix.bash  nabo_crawl_libnabo_build_matrix.bleeding.bash  nabo_crawl_libnabo_build_matrix.release.bash
build_system/.jetbrains_run_config/: (HELP) bash libnabo_installer.bash › --help menu.run.xml  (HELP) bash nabo_crawl_libnabo_build_matrix.bash › --help menu.run.xml  (HELP) bash nabo_install_libnabo_ubuntu.bash › --help menu.run.xml  [NABO] run all bats tests.run.xml  bash nabo_crawl_dependencies_build_matrix.bash › build dependencies-general dependencies (BUILD MATRIX SUBSET).run.xml  bash nabo_crawl_dependencies_build_matrix.bash › build&push dependencies-general dependencies (AS IN TC).run.xml  bash nabo_crawl_libnabo_build_matrix.bash ›  build _service_ _popup_.run.xml  bash nabo_crawl_libnabo_build_matrix.bash ›  build ci_PR_arm64v8 _popup_.run.xml  bash nabo_crawl_libnabo_build_matrix.bash ›  build dependencies_arm64v8 ci_PR_arm64v8 _popup_.run.xml  interactive.run.xml  (+9 more)
cmake/: CatkinBuild.cmake  PureCMakeBuild.cmake
contributing/: contributing_instructions.md
debian/: changelog  control  libnabo-dev.dirs  libnabo-dev.install  python-nabo.install  rules
doc/: License.dox.remake
examples/: CMakeLists.txt  trivial.cpp  usage.cpp
examples/libnabo-cmake-example/: CMakeLists.txt
experimental/: kdtree_cpu.cpp  nabo_experimental.h
html/: classNabo_1_1ContextManager-members.html  dir_308038d4e54ad11a9010a7810149e873.html  files.html  functions_enum.html  globals_defs.html  group__private.html  group__public.html  index__heap_8h.html  kdtree__cpu_8cpp.html  kdtree__opencl_8cpp.html  menudata.js  nabo_8h.html  nabo_8h_source.html  nabo__private_8h_source.html  namespaceNabo.html  namespacemembers.html  namespacemembers_func.html  structNabo_1_1BruteForceSearch.html  structNabo_1_1BruteForceSearchOpenCL-members.html  structNabo_1_1EnableCLTypeSupport_3_01double_00_01CloudType_01_4-members.html  structNabo_1_1EnableCLTypeSupport_3_01double_00_01CloudType_01_4.html  structNabo_1_1IndexHeapBruteForceVector_1_1Entry-members.html  structNabo_1_1IndexHeapSTL.html  structNabo_1_1IndexHeapSTL_1_1Entry-members.html  structNabo_1_1KDTreeBalancedPtInLeavesStackOpenCL_1_1BuildPoint-members.html  structNabo_1_1KDTreeBalancedPtInLeavesStackOpenCL_1_1BuildPoint.html  structNabo_1_1KDTreeBalancedPtInLeavesStackOpenCL_1_1CompareDim.html  structNabo_1_1KDTreeBalancedPtInLeavesStackOpenCL_1_1Node-members.html  structNabo_1_1KDTreeBalancedPtInLeavesStackOpenCL_1_1Node.html  structNabo_1_1KDTreeBalancedPtInNodesStackOpenCL.html  structNabo_1_1KDTreeBalancedPtInNodesStackOpenCL_1_1CompareDim-members.html  structNabo_1_1KDTreeBalancedPtInNodesStackOpenCL_1_1CompareDim.html  structNabo_1_1KDTreeBalancedPtInNodesStackOpenCL_1_1Node.html  structNabo_1_1KDTreeUnbalancedPtInLeavesImplicitBoundsStackOpt_1_1BucketEntry.html  structNabo_1_1KDTreeUnbalancedPtInLeavesImplicitBoundsStackOpt_1_1Node-members.html  structNabo_1_1OpenCLSearch-members.html  structNabo_1_1OpenCLSearch.html  structNabo_1_1Parameters-members.html  structNabo_1_1Parameters.html  structNabo_1_1SourceCacher-members.html  (+3 more)
nabo/: brute_force_cpu.cpp  index_heap.h  kdtree_cpu.cpp  kdtree_opencl.cpp  nabo.cpp  nabo.h  nabo_private.h
python/: CMakeLists.txt  FindPythonLibsNew.cmake  nabo.cpp  test.py
python/lib/: CMakeLists.txt
python/lib/pynabo/: __init__.py
releases/: any_8hpp_source.html  brute__force__cpu_8cpp.html  classes.html  classlinb_1_1bad__any__cast-members.html  classlinb_1_1bad__any__cast.html  dir_8b7879ded58a6d599fd8a2bc1ed836bd.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  index.html  modules.html  nabo_8cpp.html  nabo__private_8h.html  namespacemembers_type.html  namespaces.html  structNabo_1_1BruteForceSearchOpenCL.html  structNabo_1_1IndexHeapBruteForceVector_1_1Entry.html  structNabo_1_1IndexHeapSTL-members.html  structNabo_1_1KDTreeBalancedPtInLeavesStackOpenCL-members.html  structNabo_1_1KDTreeBalancedPtInLeavesStackOpenCL.html  structNabo_1_1KDTreeBalancedPtInLeavesStackOpenCL_1_1CompareDim-members.html  structNabo_1_1KDTreeBalancedPtInNodesStackOpenCL_1_1Node-members.html  structNabo_1_1KDTreeUnbalancedPtInLeavesImplicitBoundsStackOpt.html  structNabo_1_1KDTreeUnbalancedPtInLeavesImplicitBoundsStackOpt_1_1Node.html  structNabo_1_1NearestNeighbourSearch-members.html
src/: CMakeLists.txt
tests/: CMakeLists.txt  helpers.h  invalid_matrix_types_disallowed.cpp  knn.cpp  knnbench.cpp  knnbucketsize.cpp  knnepsilon.cpp  knnshow.cpp  knnvalidate.cpp
(+129 files in other folders)
