<?xml version="1.0"?>
<package>
	<name>libnabo</name>
	<version>1.0.7</version>
	<description>
		libnabo is a fast K Nearest Neighbour library for low-dimensional spaces.
	</description>

	<maintainer email="stephane.magnenat@mavt.ethz.ch">Stéphane Magnenat</maintainer>
	<license>BSD</license>
	<url type="repository">https://github.com/ethz-asl/libnabo</url>
	<author email="stephane.magnenat@mavt.ethz.ch">Stéphane Magnenat</author>

	<!-- If a pure-cmake build is desired, the buildtool should be switched to 'cmake' -->
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>eigen</build_depend>
	<build_depend>boost</build_depend>
	<build_depend>libopenmp-dev</build_depend>

	<run_depend>eigen</run_depend>
	<run_depend>boost</run_depend>
	<run_depend>catkin</run_depend>

	<!-- For a pure-cmake build the package must be exported explicitly -->
	<!-- Thus the following block of code must be un-commented -->
	<!--
	<export>
		<build_type>cmake</build_type>
	</export>
	-->
</package>
