find_package(PythonLibs)
find_package(PythonInterp)

if (PYTHONLIBS_FOUND AND PYTHONINTERP_FOUND)
	find_package(Boost COMPONENTS python REQUIRED)
	message("Python libs found, creating Python bindings")
	include_directories(${PYTHON_INCLUDE_DIRS})
	if (SHARED_LIBS)
		add_library(pynabo SHARED nabo.cpp)
		target_link_libraries(pynabo ${LIB_NAME} ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
	else (SHARED_LIBS)
		set(PYTHON_SRC "nabo.cpp")
		foreach(file ${NABO_SRC})
			set(PYTHON_SRC ${PYTHON_SRC} "../${file}")
		endforeach(file)
		python_add_module(pynabo ${PYTHON_SRC})
		target_link_libraries(pynabo ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
	endif (SHARED_LIBS)
	execute_process(COMMAND "${PYTHON_EXECUTABLE}" "-c" "from distutils.sysconfig import get_python_lib; print get_python_lib()" OUTPUT_VARIABLE PYTHON_SITE_MODULES OUTPUT_STRIP_TRAILING_WHITESPACE)
	install(TARGETS pynabo LIBRARY DESTINATION ${PYTHON_SITE_MODULES})
	message("${PYTHON_SITE_MODULES} ${PYTHON_EXEC}")
else (PYTHONLIBS_FOUND AND PYTHONINTERP_FOUND)
	message("Python libs not found, skipping Python bindings")
endif (PYTHONLIBS_FOUND AND PYTHONINTERP_FOUND)
